// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toContainAllKeys fails when given object contains all keys 1`] = `
"expect(received).not.toContainAllKeys(expected)

Expected object to not contain all keys:
  [\\"b\\", \\"a\\"]
Received:
  [\\"a\\", \\"b\\"]"
`;

exports[`.toContainAllKeys fails when all of the object keys are matched, but there are additional keys  1`] = `
"expect(received).toContainAllKeys(expected)

Expected object to contain all keys:
  [\\"a\\", \\"c\\"]
Received:
  [\\"a\\", \\"b\\"]"
`;

exports[`.toContainAllKeys fails when given an empty object 1`] = `
"expect(received).toContainAllKeys(expected)

Expected object to contain all keys:
  [\\"a\\"]
Received:
  []"
`;

exports[`.toContainAllKeys fails when given object does not contain all keys 1`] = `
"expect(received).toContainAllKeys(expected)

Expected object to contain all keys:
  [\\"a\\"]
Received:
  [\\"a\\", \\"b\\"]"
`;
